fix: use safe-area-inset in margins to prevent dynamic island from covering content

--- a/src/layouts/layout.module.scss
+++ b/src/layouts/layout.module.scss
@@ -1,19 +1,26 @@
-.header {
-	align-items: baseline;
-	display: flex;
-	flex-wrap: wrap;
-}
-
 .header,
 .main,
 .footer {
-	margin: var(--margin-small);
-	max-width: 1520px;
+	margin: var(--margin-small) auto;
+	max-width: min(
+		1520px,
+		calc(
+			100% - env(safe-area-inset-left) - env(safe-area-inset-right) -
+				(var(--margin-small) * 2)
+		)
+	);
 }
 
 .header,
 .footer {
 	--color-anchor: var(--color-primary-light);
+}
+
+.header {
+	align-items: baseline;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: max(var(--margin-small), env(safe-area-inset-top));
 }
 
 .logo {
@@ -53,6 +60,7 @@
 	flex-direction: column;
 	font-size: 0.75rem;
 	line-height: 1rem;
+	margin-bottom: max(var(--margin-small), env(safe-area-inset-bottom));
 
 	strong {
 		color: var(--color-primary);
@@ -90,13 +98,5 @@
 
 	.social {
 		margin-top: 0;
-	}
-}
-
-@media (width >= 100em) {
-	.header,
-	.main,
-	.footer {
-		margin: var(--margin-small) auto;
 	}
 }
